--- a/examples/template.html.twig
+++ b/examples/template.html.twig
@@ -1,7 +1,29 @@
 <p>
+    1 to 12 in roman:
     {% for i in 1..12 %}
         {{ i|humanizer_to_roman }}
     {% endfor %}
+</p>
+<p>
+    Roman VI = {{ 'VI'|humanizer_from_roman }}
+</p>
+<p>
+    1024 bytes = {{ 1024|humanizer_binary_suffix }}<br>
+    1024 bytes = {{ 1024|humanizer_precise_binary_suffix(2) }}
+</p>
+<p>
+    This article was posted
+    {{ date("now")|humanizer_difference(date("2014-04-24")) }}
+</p>
+<p>
+    {{ ['Michal', 'Norbert', 'Lukasz', 'Pawel']|humanizer_oxford(2) }}
+</p>
+<p>
+    1240 metric = {{ 1240|humanizer_metric_suffix }}
+</p>
+<p>
+    first: 1{{ 1|humanizer_ordinal }}<br>
+    first: {{ 1|humanizer_ordinalize }}
 </p>
 <p>
     {{ 'Lorem ipsum dolorem si amet, lorem ipsum. Dolorem sic et nunc.'|humanizer_truncate(8,'...') }}
